Refactor: separate shop keepers from hub navigators (own look files, spawner and config)